force-app/main/default/objects/Invoice_Line__c/fields/Apply_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Apply_Excise_Tax__c</fullName>
    <formula>IF(TExt(Product_Name__r.Apply_Excise_Tax__c)  = &apos;Yes&apos;  &amp;&amp;  Sales_Order_Line__r.Brand_Quote_Line__r.Apply_Excise_Tax__c = &apos;Yes&apos; ,
TEXT(Product_Name__r.Apply_Excise_Tax__c), &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply Excise Tax</label>
    <type>Text</type>
</CustomField>