force-app/main/default/objects/Invoice_Line__c/fields/Cannabis_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Category_1__c</fullName>
    <formula>TEXT(PO_Line__r.Cannabis_Category_1__c)</formula>
    <label>Cannabis Category 1</label>
    <type>Text</type>
</CustomField>