force-app/main/default/objects/Invoice_Line__c/fields/Cannabis_Ratio_1__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Ratio_1__c</fullName>
    <formula>PO_Line__r.Cannabis_Ratio_1__c</formula>
    <label>Cannabis Ratio 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>