force-app/main/default/objects/Invoice_Line__c/fields/Excise_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Excise_Tax_Amount__c</fullName>
    <description>Excise tax amount based on product excise field.</description>
    <inlineHelpText>Excise tax amount based on product.</inlineHelpText>
    <label>Excise Tax Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>