force-app/main/default/objects/Invoice_Line__c/fields/Invoice_Qty__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Qty__c</fullName>
    <label>Invoice Qty</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>