force-app/main/default/objects/Invoice_Line__c/fields/InvoiceLine_Status__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLine_Status__c</fullName>
    <label>Invoice Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>