force-app/main/default/objects/Invoice_Line__c/fields/Is_Brand_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Brand_Product__c</fullName>
    <formula>IF(OR( Product_Name__r.Producer_Name__r.Account_ID__c = $User.AccountId__c, Product_Name__r.Licensee_Name__r.Account_ID__c  = $User.AccountId__c),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Brand Product</label>
    <type>Checkbox</type>
</CustomField>