force-app/main/default/objects/Invoice_Line__c/fields/Line_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Line_Excise_Tax__c</fullName>
    <description>Invoice__r.Sales_Order__r.Brand_Quote__r.Apply_Excise_Tax__c = true</description>
    <formula>if(  Apply_Excise_Tax__c = &apos;Yes&apos; &amp;&amp; 
Sales_Order_Line__r.Brand_Quote_Line__r.Apply_Excise_Tax__c = &apos;Yes&apos; &amp;&amp;  
Text( InvoiceLine_Status__c)  &lt;&gt; &apos;Rejected&apos;  &amp;&amp;  
TEXT( InvoiceLine_Status__c)  &lt;&gt; &apos;Cancelled&apos;,
if( Invoice__r.Ship_Confirmation_Date__c &lt;= Date( 2019,12,31), Line_Total_Product_Price__c * (1.6) *(0.15), Line_Total_Product_Price__c * (1.8) *(0.15))
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Excise Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>