force-app/main/default/objects/Invoice_Line__c/fields/Line_Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Invoice_Amount__c</fullName>
    <formula>if (
TEXT( InvoiceLine_Status__c ) &lt;&gt; &apos;Rejected&apos;  &amp;&amp;  
TEXT( InvoiceLine_Status__c ) &lt;&gt; &apos;Cancelled&apos;, 
Line_Total_Product_Price__c +  Subtotal_Cultivation_Tax__c + Excise_Tax_Amount__c +  Subtotal_Local_Cannabis_Tax__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>