force-app/main/default/objects/Invoice_Line__c/fields/Line_Total_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Product_Price__c</fullName>
    <formula>if(TEXT( InvoiceLine_Status__c )  &lt;&gt; &apos;Rejected&apos;  &amp;&amp;  TEXT( InvoiceLine_Status__c )  &lt;&gt; &apos;Cancelled&apos;
, Retail_Wholesale_Price__c *  Invoice_Qty__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>