force-app/main/default/objects/Invoice_Line__c/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <formula>Sales_Order_Line__r.MOQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MOQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>