force-app/main/default/objects/Invoice_Line__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <formula>Sales_Order_Line__r.Sales_Order__r.Customer_PO_or_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order #</label>
    <type>Text</type>
</CustomField>