force-app/main/default/objects/Invoice_Line__c/fields/OwnershipCode__c.field-meta.xml
<CustomField>
    <fullName>OwnershipCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Account ,Data is copied from &quot;Sales Order Line.OwnershipCode&quot;</description>
    <label>Ownership Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>