force-app/main/default/objects/Invoice_Line__c/fields/PO_Line__c.field-meta.xml
<CustomField>
    <fullName>PO_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Line</label>
    <referenceTo>Purchase_Order_Line__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>