force-app/main/default/objects/Invoice_Line__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <formula>HYPERLINK(PO_Line__r.Purchase_Order__c,PO_Line__r.Purchase_Order__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order</label>
    <type>Text</type>
</CustomField>