force-app/main/default/objects/Invoice_Line__c/fields/QA_Review_Fee__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Fee__c</fullName>
    <label>QA Review Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>