force-app/main/default/objects/Invoice_Line__c/fields/Quantity_Cases__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Cases__c</fullName>
    <formula>Sales_Order_Line__r.Quantity_Cases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity or Cases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>