force-app/main/default/objects/Invoice_Line__c/fields/ReCalc_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>ReCalc_Excise_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in process builder</description>
    <label>ReCalc Excise Tax</label>
    <type>Checkbox</type>
</CustomField>