force-app/main/default/objects/Invoice_Line__c/fields/Receiving_Fee__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Fee__c</fullName>
    <label>Receiving Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>