force-app/main/default/objects/Invoice_Line__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <formula>Invoice__r.Sales_Person__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Person</label>
    <type>Text</type>
</CustomField>