force-app/main/default/objects/Invoice_Line__c/fields/Sample_Product__c.field-meta.xml
<CustomField>
    <fullName>Sample_Product__c</fullName>
    <description>Field used in Conga email template. DO NOT ENABLE IN CRM UI</description>
    <formula>IF( Is_Sample__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <inlineHelpText>Field used in Conga email template. DO NOT ENABLE IN CRM UI</inlineHelpText>
    <label>Sample Product</label>
    <type>Text</type>
</CustomField>