force-app/main/default/objects/Invoice_Line__c/fields/Subtotal_Category_1_Weight__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Category_1_Weight__c</fullName>
    <formula>Unit_Cannabis_Weight_1__c *  Invoice_Qty__c *  Cannabis_Ratio_1__c</formula>
    <label>Subtotal Category 1 Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>