force-app/main/default/objects/Invoice_Line__c/fields/Subtotal_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Cultivation_Tax__c</fullName>
    <formula>Unit_Cultivation_Tax__c * Invoice_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal Cultivation Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>