force-app/main/default/objects/Invoice_Line__c/fields/Subtotal_Flower_Weight__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Flower_Weight__c</fullName>
    <formula>IF(Cannabis_Category_2__c = &quot;Flower&quot;, Subtotal_Category_2_Weight__c,+ 
IF(Cannabis_Category_1__c = &quot;Flower&quot;, Subtotal_Category_1_Weight__c, Null))</formula>
    <label>Subtotal Flower Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>