force-app/main/default/objects/Invoice_Line__c/fields/Subtotal_Local_Cannabis_Tax__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Local_Cannabis_Tax__c</fullName>
    <label>Subtotal Local Cannabis Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>