force-app/main/default/objects/Invoice_Line__c/fields/TSM_Line__c.field-meta.xml
<CustomField>
    <fullName>TSM_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TSM Line</label>
    <referenceTo>Transfer_Shipping_Manifest_Line__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>