force-app/main/default/objects/Invoice_Line__c/fields/Unit_Cannabis_Weight_2__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cannabis_Weight_2__c</fullName>
    <formula>PO_Line__r.Unit_Cannabis_Weight_2__c</formula>
    <label>Unit Cannabis Weight 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>