force-app/main/default/objects/Invoice_Line__c/fields/Unit_Cannabis_Weight__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cannabis_Weight__c</fullName>
    <label>Unit Cannabis Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>