force-app/main/default/objects/Invoice_Line__c/fields/Unit_Cultivation_Tax_1__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cultivation_Tax_1__c</fullName>
    <formula>PO_Line__r.Unit_Cultivation_Tax_1__c</formula>
    <label>Unit Cultivation Tax 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>