force-app/main/default/objects/Invoice_Line__c/fields/Unit_Cultivation_Tax_2__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cultivation_Tax_2__c</fullName>
    <formula>PO_Line__r.Unit_Cultivation_Tax_2__c</formula>
    <label>Unit Cultivation Tax 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>