force-app/main/default/objects/Invoice_Line__c/fields/Unit_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cultivation_Tax__c</fullName>
    <label>Unit Cultivation Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>