force-app/main/default/objects/Invoice_Line__c/fields/Weight_to_Mileage_Fee__c.field-meta.xml
<CustomField>
    <fullName>Weight_to_Mileage_Fee__c</fullName>
    <formula>Weight_to_Order_Ratio__c * Invoice__r.Total_Mileage_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight to Mileage Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>