force-app/main/default/objects/Invoice_Line__c/recordTypes/Factoring.recordType-meta.xml
<RecordType>
    <fullName>Factoring</fullName>
    <active>true</active>
    <description>Used for Factoring Invoice Only</description>
    <label>Factoring</label>
</RecordType>