force-app/main/default/objects/Invoice_Line__c/recordTypes/Tax.recordType-meta.xml
<RecordType>
    <fullName>Tax</fullName>
    <active>true</active>
    <label>Tax</label>
</RecordType>