force-app/main/default/objects/Invoice_Line__c/recordTypes/Transfer.recordType-meta.xml
<RecordType>
    <fullName>Transfer</fullName>
    <active>true</active>
    <label>Transfer</label>
</RecordType>